# tp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  algo.odt  web.odt
ASKZUB/: manage.py
ASKZUB/ASKZUB/: settings.py  urls.py  wsgi.py
ASKZUB/ask/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
ASKZUB/ask/management/commands/: fill_db.py
ASKZUB/ask/migrations/: 0001_initial.py  0002_author_avatar.py  0003_auto_20191028_1432.py  0004_auto_20191028_1559.py  0005_auto_20191028_1611.py  0006_auto_20191028_1624.py  0007_auto_20191028_1751.py  0008_auto_20191028_2118.py
ASKZUB/ask/utils/: paginator.py  vote.py
ASKZUB/static/js/: vote.js
ASKZUB/templates/: ask.html  index.html  login.html  profile.html  question.html  signup.html  tag.html
ASKZUB/templates/extends/: base.html
ASKZUB/templates/includes/: answer_unit.html  head.html  navbar.html  pagination.html  question_unit.html  render_form.html  sidebar_best_members.html  sidebar_tags.html
forum/: base.html
forum/templates/: base.html  index.html
module1/: 1_4 counting.cpp  2_1 next_element.cpp  3_1 queue_looped_buffer.cpp  4_3 deadlocks.cpp  6_3 order_statistics.cpp  CMakeLists.txt
module2/: 1_2 hash_table.cpp  2_2 tree_pre_order.cpp  4_1 avl_soldiers.cpp  5 huffman.cpp  CMakeLists.txt
module3/: CMakeLists.txt  cities.cpp  num_of_min_paths.cpp
module3/task1/includes/: ArcGraph.h  IGraph.h  ListGraph.h  MatrixGraph.h  SetGraph.h  Utils.h
module3/task1/src/: ArcGraph.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp  Utils.cpp  main.cpp
project/include/: matrix.h  seq_realisation.h  utils.h
project/src/: main.c  matrix.c  seq_realisation.c  utils.c
project/test/: test.cpp
sem1/: index.html
task1/: 1_4 counting.cpp  2_1 next_element.cpp  3_1 queue_looped_buffer.cpp  4_3 deadlocks.cpp  5_3 paint_line.cpp  6_3 order_statistics.cpp  7_3 binary_msd.cpp  CMakeLists.txt  counting.cpp  main.c  matrix.c  matrix.h  test.c  test.h  test_file.txt  utils.h
task1/project/include/: matrix.h  test.h  utils.h
task1/project/src/: main.c  matrix.c  test.c  tests_gtest.c  utils.c
task1/project/tests/: test.txt
