cmake_minimum_required(VERSION 3.14)
project(task1)

set(CMAKE_CXX_STANDARD 14)

add_executable(task1_4 1_4\ counting.cpp)
add_executable(task2_1 2_1\ next_element.cpp)
add_executable(task3_1 3_1\ queue_looped_buffer.cpp)
add_executable(task4_3 4_3\ deadlocks.cpp)
add_executable(task5_3 5_3\ paint_line.cpp)
add_executable(task6_3 6_3\ order_statistics.cpp)
add_executable(task7_3 7_3\ binary_msd.cpp)